--- a/src/assets/css/dark-blue.css
+++ b/src/assets/css/dark-blue.css
@@ -4933,3 +4933,11 @@ fill: #f5f5f5;
     color: #fff;
     background: #a4a4a4;;
 }
+.dark-blue .mltplSwtchDiv div.active {
+  border: 1.5px solid #26AB8B;
+  color: #26AB8B;
+}
+.dark-blue .mltplSwtchDiv.blue div.active {
+  border: 1.5px solid #53A9F1;
+  color: #53a9f1;
+}
